Update DoublyLinkedListTest.java