@@ -1,7 +1,10 @@
 package ru.vsu.cs.uvarov_d_p.oop.tests;
 
-import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.*;
+import org.junit.Test;
+import ru.vsu.cs.uvarov_d_p.oop.DoublyLinkedList;
+import ru.vsu.cs.uvarov_d_p.oop.SimpleLinkedListException;
+
+import static org.junit.Assert.*;
 
 public class DoublyLinkedListTest {
 
@@ -13,25 +16,25 @@ public class DoublyLinkedListTest {
     }
 
     @Test
-    public void testAddFirst() {
+    public void testAddFirst() throws SimpleLinkedListException {
         DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addFirst(1);
         list.addFirst(2);
 
         assertEquals(2, list.size());
-        assertEquals(2, list.getFirst());
-        assertEquals(1, list.getLast());
+        assertEquals(2, (long) list.getFirst());
+        assertEquals(1, (long) list.getLast());
     }
 
     @Test
-    public void testAddLast() {
+    public void testAddLast() throws SimpleLinkedListException {
         DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
         list.addLast(1);
         list.addLast(2);
 
         assertEquals(2, list.size());
-        assertEquals(1, list.getFirst());
-        assertEquals(2, list.getLast());
+        assertEquals(1, (long) list.getFirst());
+        assertEquals(2, (long) list.getLast());
     }
 
     @Test
@@ -42,9 +45,9 @@ public class DoublyLinkedListTest {
         list.insert(1, 2);
 
         assertEquals(3, list.size());
-        assertEquals(1, list.get(0));
-        assertEquals(2, list.get(1));
-        assertEquals(3, list.get(2));
+        assertEquals(1, (long) list.get(0));
+        assertEquals(2, (long) list.get(1));
+        assertEquals(3, (long) list.get(2));
     }
 
     @Test
@@ -54,9 +57,9 @@ public class DoublyLinkedListTest {
         list.addLast(2);
         list.addLast(3);
 
-        assertEquals(1, list.removeFirst());
+        assertEquals(1, (long) list.removeFirst());
         assertEquals(2, list.size());
-        assertEquals(2, list.getFirst());
+        assertEquals(2, (long) list.getFirst());
     }
 
     @Test
@@ -66,9 +69,9 @@ public class DoublyLinkedListTest {
         list.addLast(2);
         list.addLast(3);
 
-        assertEquals(3, list.removeLast());
+        assertEquals(3, (long) list.removeLast());
         assertEquals(2, list.size());
-        assertEquals(2, list.getLast());
+        assertEquals(2, (long) list.getLast());
     }
 
     @Test
@@ -78,10 +81,10 @@ public class DoublyLinkedListTest {
         list.addLast(2);
         list.addLast(3);
 
-        assertEquals(2, list.remove(1));
+        assertEquals(2, (long) list.remove(1));
         assertEquals(2, list.size());
-        assertEquals(1, list.get(0));
-        assertEquals(3, list.get(1));
+        assertEquals(1, (long) list.get(0));
+        assertEquals(3, (long) list.get(1));
     }
 
     @Test
@@ -91,9 +94,9 @@ public class DoublyLinkedListTest {
         list.addLast(20);
         list.addLast(30);
 
-        assertEquals(10, list.get(0));
-        assertEquals(20, list.get(1));
-        assertEquals(30, list.get(2));
+        assertEquals(10, (long) list.get(0));
+        assertEquals(20, (long) list.get(1));
+        assertEquals(30, (long) list.get(2));
     }
 
     @Test
@@ -165,12 +168,12 @@ public class DoublyLinkedListTest {
         list.addFirst(42);
 
         assertEquals(1, list.size());
-        assertEquals(42, list.getFirst());
-        assertEquals(42, list.getLast());
-        assertEquals(42, list.get(0));
+        assertEquals(42, (long) list.getFirst());
+        assertEquals(42, (long) list.getLast());
+        assertEquals(42, (long) list.get(0));
         assertTrue(list.contains(42));
 
-        assertEquals(42, list.removeFirst());
+        assertEquals(42, (long) list.removeFirst());
         assertTrue(list.isEmpty());
     }
 
@@ -178,24 +181,20 @@ public class DoublyLinkedListTest {
     public void testMultipleOperations() throws SimpleLinkedListException {
         DoublyLinkedList<Integer> list = new DoublyLinkedList<>();
 
-        // Добавляем элементы
         for (int i = 0; i < 5; i++) {
             list.addLast(i);
         }
 
         assertEquals(5, list.size());
-        assertEquals(0, list.getFirst());
-        assertEquals(4, list.getLast());
+        assertEquals(0, (long) list.getFirst());
+        assertEquals(4, (long) list.getLast());
 
-        // Удаляем из середины
-        assertEquals(2, list.remove(2));
+        assertEquals(2, (long) list.remove(2));
         assertEquals(4, list.size());
 
-        // Добавляем в начало
         list.addFirst(-1);
-        assertEquals(-1, list.getFirst());
+        assertEquals(-1, (long) list.getFirst());
 
-        // Очищаем
         list.clear();
         assertTrue(list.isEmpty());
     }
